--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
+*{
+  background-color:aquamarine;
+  
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+img{
+  width:200px;
+    border-radius: 100px;
+    height: 200px;
+    
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .profil{
+    display: flex;
+    justify-content: center;
+    
+    
   }
-  to {
-    transform: rotate(360deg);
+  .info{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    
   }
-}
+  .addrss{
+    display: flex;
+    justify-content: center;
+  }
